# KataForPT

./: CMakeLists.txt  README.txt  TheChallenge.txt  Thinking.txt
source/: CMakeLists.txt  main.cpp
source/proj/: CMakeLists.txt  Cents.h  CoinAccepter.cpp  CoinAccepter.h  CoinCandidate.h  CoinIdentifier.cpp  CoinIdentifier.h  CoinSpecifications.h  CoinType.h  ProductSelectionService.cpp  ProductSelectionService.h  SelectionValidator.cpp  SelectionValidator.h  VendingMachineApp.cpp  VendingMachineApp.h  VendingMachineDisplay.cpp  VendingMachineDisplay.h  VendingProduct.h
source/tests/: CMakeLists.txt
source/tests/projtests/: CMakeLists.txt  CoinAccepterHelpers.cpp  CoinAccepterHelpers.h  TestCoinAccepter.cpp  TestCoinIdentifier.cpp  TestProductSelectionService.cpp  TestSelectionValidator.cpp  TestVendingMachineApp.cpp  TestVendingMachineDisplay.cpp
